--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     
                     // Remove physics and make static
                     this.el.removeAttribute('dynamic-body');
-                    this.el.setAttribute('static-body', '');
+//                    this.el.setAttribute('static-body', '');
                     
                     // Remove interactivity
                     this.el.removeAttribute('hoverable');
